# lrzsz

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  acconfig.h  acinclude.m4  aclocal.m4  check.lrzsz  config.h.in  configure  configure.ac  configure.in  fastcheck.sh  inserterrors.go  version.go.in
doc/: FEATURES  timesync.doc
lib/: Makefile.am  Makefile.in  error.c  long-options.c  strerror.c  xstrtol.c
m4/: ChangeLog
man/: Makefile.in
po/: ChangeLog  Makevars  POTFILES  cat-id-tbl.c  de.gmo  de.po  lrzsz.pot
src/: Makefile.am  Makefile.in  baudrate.c  canit.c  check_stderr.c  close_and_update_meta.c  crctab.c  iomode.c  log.c  lrz.c  lrzsz.h  lsyslog.c  lsz.c  protname.c  rbsb.c  tcp.c  timing.c  timing.h  utils.c  zglobal.h  zm.c  zmodem.h  zperr.c  zreadline.c
testsuite/: Makefile.in
testsuite/lrzsz/: compatability.exp  null.exp
